Fix index CSS on mobile

--- a/_compass/screen.scss
+++ b/_compass/screen.scss
@@ -67,8 +67,12 @@ section section h1 {
 		margin-bottom: 1em;
 	}
 
+	.samples-section-header {
+		margin-bottom: 0.5em;
+	}
+
 	.index-item {
-		margin-bottom: 2em;
+		margin-bottom: 1.2em;
 		
 		h1 {
 			font-family: 'Roboto';
